<resources>
    <string name="app_name">Yelp Reviews</string>

    <string name="price1">$</string>
    <string name="price2">$$</string>
    <string name="price3">$$$</string>
    <string name="price4">$$$$</string>
    <string name="category">Category</string>
    <string name="search">Search</string>

    <plurals name="reviews">
        <item quantity="one">%d review</item>
        <item quantity="other">%d reviews</item>
    </plurals>

    <string name="greater_location">%1$s, %2$s %3$s</string>

    <string name="generic_error">An error has occurred.</string>
</resources>
