<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.yveschiong.yelpreviews.ui.searchfilter.SearchFilterViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.searchfilter.SearchFilterFragment">

        <ToggleButton
            android:id="@+id/price1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/priceMargin"
            android:gravity="center"
            android:onCheckedChanged="@{(_, isChecked) -> viewModel.onToggled(1, isChecked)}"
            android:textOff="@string/price1"
            android:textOn="@string/price1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/price2"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/price2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/priceMargin"
            android:layout_marginEnd="@dimen/priceMargin"
            android:layout_marginRight="@dimen/priceMargin"
            android:gravity="center"
            android:onCheckedChanged="@{(_, isChecked) -> viewModel.onToggled(2, isChecked)}"
            android:textOff="@string/price2"
            android:textOn="@string/price2"
            app:layout_constraintLeft_toRightOf="@+id/price1"
            app:layout_constraintRight_toLeftOf="@+id/price3"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/price3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/priceMargin"
            android:gravity="center"
            android:onCheckedChanged="@{(_, isChecked) -> viewModel.onToggled(3, isChecked)}"
            android:textOff="@string/price3"
            android:textOn="@string/price3"
            app:layout_constraintLeft_toRightOf="@+id/price2"
            app:layout_constraintRight_toLeftOf="@+id/price4"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/price4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/priceMargin"
            android:gravity="center"
            android:onCheckedChanged="@{(_, isChecked) -> viewModel.onToggled(4, isChecked)}"
            android:textOff="@string/price4"
            android:textOn="@string/price4"
            app:layout_constraintLeft_toRightOf="@+id/price3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/autocompleteLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textInputMargin"
            android:padding="@dimen/textInputPadding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price1">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:hint="@string/category"
                app:textChange="@{viewModel.categoriesTextChange}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textInputMargin"
            android:padding="@dimen/textInputPadding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autocompleteLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/searchTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search"
                app:textChange="@{viewModel.searchTextChange}" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:onClick="@{() -> viewModel.onSearchButtonClicked()}"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>

